# seaography_study

./: README.md
backend/: README.md
backend/graphql/: .env  .env.sample  Cargo.toml
backend/graphql/src/: main.rs
backend/graphql/src/entities/: cake.rs
backend/migration/: Cargo.toml  README.md
backend/migration/src/: m20230102_000001_seed_bakery_data.rs
backend/migration/src/entity/: baker.rs  bakery.rs  cake.rs  cake_baker.rs  mod.rs
frontend/: codegen.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  query.graphql
frontend/src/__generated__/: gql.ts  graphql.ts
