[workspace]

[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm]
version = "~1.1.4" # sea-orm version

[dependencies.sea-orm-migration]
version = "~1.1.4" # sea-orm-migration version
features = [
  "runtime-async-std-native-tls",
  "sqlx-postgres",
]
